<resources>
    <string name="app_name">INFO5126Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register new user</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_user">Welcome new user</string>
    <string name="problem">Problem creating account</string>
    <string name="logout">Logout</string>
    <string name="logged_out">You are now logged out</string>
    <string name="no_account">Do not have an account, Register </string>
    <string name="sign_in">Sign In</string>
    <string name="add">Add to Cloud</string>
    <string name="read">Read from Cloud</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_history">History</string>
    <string name="back_to_main">Back to Main Page</string>
    <string name="about_text">INFO5126 project by Hongseok Kim and Stanislav Kovalenko\n\nThe app is used to watch recent news (use news API) and save news that you opened\n\nFor detailed instruction check word document.</string>
</resources>